--- a/examples/pendulum_finder/pendulum_nn_autotrain.ipynb
+++ b/examples/pendulum_finder/pendulum_nn_autotrain.ipynb
@@ -22,7 +22,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#%cd /content/drive/MyDrive/git/optimal_control_jax\n",
+    "#%cd /content/drive/MyDrive/<..>/optimal_control_jax/examples/pendulum_finder\n",
     "#%pip install jaxopt tensor-canvas"
    ]
   },
